Updates from Overleaf

--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -181,7 +181,7 @@ TVD erfordert die Auswahl der Partner primär anhand von Qualifikationen, \enquo
 Das Vergaberecht fordert einen transparenten Wettbewerb um das \enquote{wirtschaftlichste Angebot} (§ 127 GWB).\autocite[Vgl.][§~127]{noauthor_gesetz_2013} Da zum Zeitpunkt der TVD-Beauftragung oft noch keine detaillierte Leistungsbeschreibung vorliegt (da diese erst gemeinsam entwickelt werden soll), ist ein reiner Preiswettbewerb methodisch unmöglich. Die rechtssichere Operationalisierung von \enquote{Kooperationsfähigkeit} als Zuschlagskriterium erfordert aufwendige Verfahren (z.\,B. Wettbewerblicher Dialog), die öffentliche Auftraggeber möglicher Weise aufgrund der Komplexität scheuen.
 
 \minisec{Die \enquote{Vorbefasstheits-Falle} beim Early Contractor Involvement}
-Die von Granja et al. (2023) geforderte frühzeitige Einbindung ausführender Unternehmen (ECI) als Berater in der frühen Phase birgt im deutschen Vergaberecht das Risiko der \enquote{Projektantenproblematik} (§ 7 VgV).\autocite[Vgl.][S. 2]{muianga_modelo_2023}\, \autocite[Vgl.][§ 7]{vgv_verordnung_2016}
+Die von Granja et al. (2023) geforderte frühzeitige Einbindung ausführender Unternehmen (ECI) als Berater in der frühen Phase birgt im deutschen Vergaberecht das Risiko der \enquote{Projektantenproblematik} (§ 7 VgV).\autocite[Vgl.][S. 2]{granja_modelo_2023}\, \autocite[Vgl.][§ 7]{vgv_verordnung_2016}
 Ein Unternehmen, das in Phase 0/1 an der Zielkostenfindung mitgewirkt hat, verfügt über einen Wissensvorsprung. Um den Grundsatz der Gleichbehandlung im späteren Wettbewerb um die Bauleistung nicht zu verletzen, droht diesem Unternehmen der Ausschluss vom Verfahren. Dies führt zu einem systemischen Bruch: Das wertvolle Wissen, das in der Beratungsphase aufgebaut wurde, darf nicht nahtlos in die Realisierungsphase überführt werden, was den Kernnutzen von TVD konterkariert.
 
 \minisec{Marktzutrittsbarrieren durch Digitalisierungsanforderungen (KMU-Lücke)}
