--- a/02_mainmatter/ch6_Fazit.tex
+++ b/02_mainmatter/ch6_Fazit.tex
@@ -6,15 +6,15 @@
 
 Ziel dieser Arbeit war es, die Übertragbarkeit des Target Value Design (TVD) auf die deutsche Baupraxis systematisch zu untersuchen und die dabei auftretenden Hemmnisse nicht isoliert, sondern im Zusammenspiel von Methodik, Vertragslogik und Ordnungsrahmen zu analysieren. Auf Basis eines idealtypischen Phasenmodells (Phase 0–3) wurden die identifizierten Herausforderungen in drei zentrale Dilemmata gebündelt.
 
-Die Analyse zeigt, dass TVD als methodischer Ansatz grundsätzlich mit der deutschen Baupraxis kompatibel ist, seine Wirksamkeit jedoch stark von den institutionellen Rahmenbedingungen abhängt. Die wesentlichen Hemmnisse liegen dabei nicht in der fehlenden Leistungsfähigkeit der Methode selbst, sondern in strukturellen Inkongruenzen zwischen der iterativen, wertorientierten Logik von TVD und den linear organisierten Systemen des öffentlichen Bauens.
+Die Analyse zeigt, dass TVD als methodischer Ansatz grundsätzlich mit der deutschen Baupraxis kompatibel ist, seine Wirksamkeit jedoch stark von den institutionellen Rahmenbedingungen abhängt. Die wesentlichen Hemmnisse liegen dabei nicht in der fehlenden Leistungsfähigkeit der Methode selbst, sondern in strukturellen Reibungspunkten zwischen der iterativen, wertorientierten Logik von TVD und den linear organisierten Systemen des öffentlichen Bauens.
 
-Im Beschaffungs-Dilemma wurde deutlich, dass die frühe Integration aller Schlüsselakteure – eine Kernvoraussetzung von TVD – im öffentlichen Sektor nur eingeschränkt realisierbar ist. Zwar existieren vergaberechtliche Instrumente zur kompetenzbasierten Auswahl, deren Anwendung ist jedoch mit hohen Transaktionskosten verbunden und daher auf Großprojekte beschränkt. Vereinfachte Modelle reduzieren zwar den Aufwand, schwächen jedoch häufig den methodischen Kern von TVD.
+Im Beschaffungs-Dilemma wurde deutlich, dass die frühe Integration aller Schlüsselakteure, eine Kernvoraussetzung von TVD, vor allem im öffentlichen Sektor nur eingeschränkt realisierbar ist. Zwar existieren vergaberechtliche Instrumente zur kompetenzbasierten Auswahl, deren Anwendung ist jedoch mit hohen Transaktionskosten verbunden und daher eher auf Großprojekte beschränkt. Vereinfachte Modelle (z.B. IPA-Light) reduzieren zwar den Aufwand, schwächen jedoch häufig den methodischen Kern von TVD.
 
-Das Wert-Dilemma zeigt, dass im öffentlichen Hochbau eine strukturelle Asymmetrie zwischen Kosten- und Wertsteuerung besteht. Während Zielkosten früh festgelegt und institutionell abgesichert werden, bleibt der angestrebte Projektwert oft abstrakt und methodisch unterdefiniert. In Abwesenheit eines ökonomischen ROI und bei getrennter Budgetverantwortung für Investition und Betrieb tendiert TVD dazu, auf die Minimierung von Erstkosten verengt zu werden, wodurch qualitative und lebenszyklusbezogene Ziele an Steuerungswirkung verlieren.
+Das Wert-Dilemma zeigt, dass im öffentlichen Hochbau Asymmetrie zwischen Kosten- und Wertsteuerung besteht. Während Zielkosten früh festgelegt und institutionell abgesichert werden, bleibt der angestrebte Projektwert oft abstrakt und methodisch unterdefiniert. In Abwesenheit eines ökonomischen ROI und bei getrennter Budgetverantwortung für Investition und Betrieb tendiert TVD dazu, auf die Minimierung von Erstkosten verengt zu werden, wodurch qualitative und lebenszyklusbezogene Ziele an Steuerungswirkung verlieren.
 
 Im Struktur-Dilemma schließlich wurde herausgearbeitet, dass selbst kooperative Vertragsmodelle zentrale Barrieren nicht vollständig auflösen können. Die regulatorisch verankerte Trennung von Planung, Genehmigung und Ausführung steht im Widerspruch zur iterativen Logik von TVD. Insbesondere die begrenzte Möglichkeit zur Parallelisierung von Planen und Bauen sowie der faktische Zwang zu frühen Festlegungen schränken den methodischen Handlungsspielraum ein. Diese Grenzen liegen außerhalb der vertraglichen Gestaltungsfreiheit und sind im öffentlichen Genehmigungs- und Haushaltsrecht begründet.
 
-Zusammenfassend lässt sich die eingangs formulierte Forschungsfrage wie folgt beantworten: Die Integration von Target Value Design in die deutsche öffentliche Projektabwicklung ist grundsätzlich möglich und fachlich sinnvoll, sie erfordert jedoch einen hybriden Ansatz. Unter den bestehenden rechtlichen Rahmenbedingungen (VOB, HOAI, Haushaltsrecht) kann TVD seine volle transformative Wirkung nicht entfalten, sondern muss als methodisches \enquote{Overlay} verstanden werden, das über bestehende Strukturen gelegt wird. Dieser Ansatz ermöglicht eine verbesserte Kosten- und Wertsteuerung, stößt jedoch dort an systemische Grenzen, wo gesetzliche Vorgaben eine lineare Planung und frühzeitige Fixierung erzwingen, die mit der iterativen Logik von TVD nur eingeschränkt vereinbar sind.
+Zusammenfassend lässt sich die eingangs formulierte Forschungsfrage wie folgt beantworten: Die Integration von Target Value Design in die deutsche öffentliche Projektabwicklung ist grundsätzlich möglich und fachlich sinnvoll. Sie erfordert jedoch einen hybriden Ansatz. Unter den bestehenden rechtlichen Rahmenbedingungen (VOB, HOAI, Haushaltsrecht) kann TVD seine volle transformative Wirkung nicht entfalten, sondern muss als methodisches \enquote{Overlay} verstanden werden, das über bestehende Strukturen gelegt wird. Dieser Ansatz ermöglicht eine verbesserte Kosten- und Wertsteuerung, stößt jedoch dort an systemische Grenzen, wo gesetzliche Vorgaben eine lineare Planung und frühzeitige Fixierung erzwingen, die mit der iterativen Logik von TVD nur eingeschränkt vereinbar sind.
 
 \section{Weiterer Forschungsbedarf}
 \label{sec:further research}
