--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,72 @@
 
+@misc{pawlik_flughafen_2022,
+	title = {Flughafen {Berlin}-{Brandenburg} - {Kostenschätzungen}},
+	url = {https://de.statista.com/statistik/daten/studie/245914/umfrage/kosten-des-flughafens-berlin-brandenburg/},
+	abstract = {Für den Bau des Flughafen Berlin Brandenburg „Willy Brandt“ (IATA: BER, ICAO: EDDB) waren im Jahr 2005 Baukosten von *** Milliarden Euro geplant.},
+	language = {de},
+	urldate = {2026-01-12},
+	journal = {Statista},
+	author = {Pawlik, V},
+	year = {2022},
+}
+
+@misc{noauthor_ber_nodate,
+	title = {Der {BER} – ein dauerhaftes {Zuschussgeschäft} für {Steuerzahler}?},
+	url = {https://www.steuerzahler.de/aktuelles/detail/der-ber-ein-dauerhaftes-zuschussgeschaeft-fuer-steuerzahler/},
+	abstract = {BdSt zur heutigen Eröffnung des Airports Berlin Brandenburg},
+	language = {de},
+	urldate = {2026-01-12},
+}
+
+@article{kornai_soft_1986,
+	title = {The {Soft} {Budget} {Constraint}},
+	volume = {39},
+	copyright = {http://onlinelibrary.wiley.com/termsAndConditions\#vor},
+	issn = {0023-5962, 1467-6435},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1467-6435.1986.tb01252.x},
+	doi = {10.1111/j.1467-6435.1986.tb01252.x},
+	abstract = {SUMMARY
+              The ‘softening’ of the budget constraint appears when the strict relationship between the expenditure and the earnings of an economic unit (firm, household, etc.) has been relaxed, because excess expenditure will be paid by some other institution, typically be the paternalistic State. The higher the subjective probability that excess expenditure will be covered by external assistance, the softer the budget constraint. The main focus of the paper is on the firm. There are several ways of ‘softening’ the budget constraint: subsidies, tax‐exemptions, soft credits and so on. The softness weakens price responsiveness, leads to losses in efficiency and under certain conditions may generate excess demand. The paper examines the ‘soft budget constraint’ syndrome in Hungary, Yugoslavia, and China, i.e. in the economies pioneering in the introduction of market‐oriented decentralization reforms. Socialist economies exhibit a rather extreme degree of this phenomenon, which to a lesser degree can be observed in mixed economies as well.
+            
+            
+              ZUSAMMENFASSUNG
+              Die “Aufweichung” der Budgetrestriktionen zeigt sich, wenn der enge Zusammen‐hang zwischen den Ausgaben und Einnahmen einer Wirtschaftseinheit (Firma, Haus‐halt usw.) sich auflockert, weil die Mehrausgabe von einer anderen Institution, im typischen Falle vom paternalistischen Staat gedeckt wird. Je höher die subjektive Wahrscheinlichkeit ist, dass die Mehrausgabe durch eine aussenstehende Hilfsquelle gedeckt wird, um so weicher ist die Budgetrestriktion. Im Mittelpunkt dieser Abhand‐lung steht das Unternehmen. Es gibt mehrere Möglichkeiten zur “Aufweichung” der Budgetrestriktion: Subventionen, Steuerfreiheit, weiche Kredite usw. Die Weiche schwächt die Preissensibilität, führt zu Verlusten in der Wirksamkeit, und unter gewissen Umständen kann eine Mehrnachfrage herbeigeführt werden. Die Abhand‐lung untersucht das Phanomen der “weichen Budgetrestriktion” in Ungarn, Jugosla‐wien und China, das heisst in den Wirtschaften, die in der Einführung von marktorien‐tierten Dezentralisationsreformen bahnbrechend sind. Die sozialistischen Wirtschaften weisen einen ziemlich hohen Grad dieses Phänomens auf, das in geringerem Masse auch in gemischten Wirtschaften zu beobachten ist.
+            
+            
+              RÉSUMÉ
+              L'adoucissement” de la contrainte budgétaire apparaît lors du relâchement de la stricte relation entre les dépenses et les recettes d'une unitééconomique (entreprise, ménage…). Cela survient quand l'excés de dépenses est pris en charge par une autre institution, l'exemple type en étant l'Etat‐Providence. II existe plusieurs façons “d'adoucir” la contrainte budgétaire: les subventions, les abattements fiscaux, les crédits bonifiés, etc. Cet adoucissement affaiblit la capacityé de réponse par les prix, il conduit à des pertes d'efficacité, et, dans certaines conditions, peut engendrer un excès de demande. On peut contempler le stade ultime de ce phénomène dans les économies socialistes, mais les économies mixtes en présentent certains symptômes.
+              L'auteur examine le syndrôme de “l'adoucissement” de la contrainte budgétaire en Hongrie, en Yougoslavie et en Chine, c'est‐à‐dire dans les économies socialistes qui, les premierès, ont tenté une certaine décentralisation économique.},
+	language = {en},
+	number = {1},
+	urldate = {2026-01-12},
+	journal = {Kyklos},
+	author = {Kornai, János},
+	month = feb,
+	year = {1986},
+	pages = {3--30},
+}
+
+@article{granja_modelo_2023,
+	title = {Modelo evolutivo para la transición gradual a la {Entrega} {Integrada} de {Proyectos} ({IPD})},
+	volume = {38},
+	abstract = {Over the years, construction projects have been developed and delivered through traditional delivery methods. However, traditional delivery methods have been considered ineffective to achieve the real project goals. Integrated and collaborative models, such as Integrated Project Delivery (IPD), a delivery method based on relational contracts, has attracted growing interest in both academia and industry, but still scarce in Architecture Engineering, and Construction (AEC). Most prior research emphasized the identification of barriers and challenges to implementing IPD and few studies focused on developing strategies to overcome those constraints. A limited number of studies have addressed how to reap the benefits of IPD in AEC environments where collaboration between stakeholders is poor. This research investigates how to integrate IPD into AEC projects when collaboration is still limited. An “IPD Evolutionary Model” and guidelines for its implementation were developed for applications in such environments. Design Science Research was the research approach adopted in this study to discuss and evaluate the proposed model. The model emphasizes an evolutionary and flexible process for the IPD application in AEC projects. The model postulates the desirable and required IPD elements according to the levels of application difficulty, emphasising stakeholders' readiness for using it and the gradual introduction of IPD in such environments.},
+	number = {1},
+	journal = {Revista Ingeniería de Construcción},
+	author = {Granja, Ariovaldo Denis and Muianga, Elisa Atália Daniel and Picchi, Flavio Augusto and Formoso, Carlos Torres},
+	month = apr,
+	year = {2023},
+	pages = {144 -- 162},
+}
+
+@misc{bho_bundeshaushaltsordnung_1969,
+	title = {Bundeshaushaltsordnung},
+	url = {https://www.gesetze-im-internet.de/bho/BJNR012840969.html},
+	urldate = {2026-01-12},
+	author = {BHO},
+	month = aug,
+	year = {1969},
+}
+
 @book{haghsheno_lean_2019,
 	edition = {1},
 	title = {Lean {Construction}  {Begriffe} und {Methoden}},
@@ -343,18 +411,6 @@
 	month = jul,
 	year = {2015},
 	pages = {815--825},
-}
-
-@article{muianga_modelo_2023,
-	title = {Modelo evolutivo para la transición gradual a la {Entrega} {Integrada} de {Proyectos} ({IPD})},
-	volume = {38},
-	abstract = {Over the years, construction projects have been developed and delivered through traditional delivery methods. However, traditional delivery methods have been considered ineffective to achieve the real project goals. Integrated and collaborative models, such as Integrated Project Delivery (IPD), a delivery method based on relational contracts, has attracted growing interest in both academia and industry, but still scarce in Architecture Engineering, and Construction (AEC). Most prior research emphasized the identification of barriers and challenges to implementing IPD and few studies focused on developing strategies to overcome those constraints. A limited number of studies have addressed how to reap the benefits of IPD in AEC environments where collaboration between stakeholders is poor. This research investigates how to integrate IPD into AEC projects when collaboration is still limited. An “IPD Evolutionary Model” and guidelines for its implementation were developed for applications in such environments. Design Science Research was the research approach adopted in this study to discuss and evaluate the proposed model. The model emphasizes an evolutionary and flexible process for the IPD application in AEC projects. The model postulates the desirable and required IPD elements according to the levels of application difficulty, emphasising stakeholders' readiness for using it and the gradual introduction of IPD in such environments.},
-	number = {1},
-	journal = {Revista Ingeniería de Construcción},
-	author = {Muianga, Elisa Atália Daniel and Granja, Ariovaldo Denis and Picchi, Flavio Augusto and Formoso, Carlos Torres},
-	month = apr,
-	year = {2023},
-	pages = {144 -- 162},
 }
 
 @article{oliva_target_2024,
@@ -737,24 +793,6 @@ Section: Research Methods \&amp; Reporting},
 	editor = {Fiedler, Martin},
 	year = {2018},
 	doi = {10.1007/978-3-662-55337-4},
-}
-
-@article{oliva_target_2024-1,
-	title = {Target value design: guidelines for implementation in the real estate market in {Brazil}},
-	volume = {20},
-	issn = {1745-2007, 1752-7589},
-	shorttitle = {Target value design},
-	url = {https://www.tandfonline.com/doi/full/10.1080/17452007.2023.2281366},
-	doi = {10.1080/17452007.2023.2281366},
-	abstract = {In the current construction industry scenario, several constraints schedule, scope, cost - impact the quality of products delivered. From the clients’ and users’ perspectives, there is a need to incorporate innovative methods for value management in the sector. Delivering products with more added value often runs into investor restrictions and difficulties imposed by a fragmented product development process, representing obstacles to collaboration among stakeholders, especially in the real estate context. These characteristics demand a proactive design process focusesed on value delivery. One of them is Target Value Design (TVD), which has emerged as a viable solution to solve the poor performance in construction. Most TVD applications reported are cases where the owner sets the goals based on the available budget and desired functionalities. This research aims to develop a TVD model adapted for real estate projects, specifically for products with units for sale. In this context, one single company combines different roles, acting as developer and contractor and being responsible for sales to final users. The market, and not the owner, defines the target value and cost. The study was developed in Brazil, where this arrangement is very common, but can provide insights into other countries with similar characteristics. For this purpose, this research adopted the Design Science Research (DSR) strategy, which seeks to explain, describe, explore, or prescribe solutions for real-life problems. Focus Groups technique helped to develop and validate the artifact through learning cycles. As a result, the research proposes a TVD-adapted model and guidelines for implementation in the real estate market.},
-	language = {en},
-	number = {6},
-	urldate = {2025-08-17},
-	journal = {Architectural Engineering and Design Management},
-	author = {Oliva, Carolina Asensio and Granja, Ariovaldo Denis and Picchi, Flávio Augusto},
-	month = nov,
-	year = {2024},
-	pages = {1323--1334},
 }
 
 @article{desmarais_target_2024,
