Updates from Overleaf

--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -4,11 +4,11 @@
 \section{Problemstellung und Relevanz}
 \label{ch:1.1}
 
-Die deutsche Bau- und Immobilienbranche steht vor immensen Herausforderungen, die eine grundlegende Steigerung der Effizienz und Umsetzungsgeschwindigkeit erfordern. Ein signifikantes Wohnungsbaudefizit, das je nach Studie auf über 550.000 fehlende Wohnungen beziffert wird, verlangt nach einer drastischen Beschleunigung des Neubaus. \autocite[vgl. S. 8]{walberg_wohnungsbau_2025} Gleichzeitig stellt die Bundesregierung ein Sondervermögen für Infrastruktur und Klimaschutz bis 2029 in Milliardenhöhe bereit, um die bauliche Transformation voranzutreiben. \autocite[vgl.]{brinkmeier_bundeshaushalt_2025} Die Umsetzung dieser Mittel in konkrete Projekte droht jedoch an strukturellen Problemen zu scheitern: Eklatanter Fachkräftemangel, anhaltende Kapazitätsengpässe in der Bauwirtschaft und langwierige Genehmigungsverfahren bremsen die Realisierung.
+Die deutsche Bau- und Immobilienbranche steht vor immensen Herausforderungen, die eine grundlegende Steigerung der Effizienz und Umsetzungsgeschwindigkeit erfordern. Ein signifikantes Wohnungsbaudefizit, das je nach Studie auf über 550.000 fehlende Wohnungen beziffert wird, verlangt nach einer drastischen Beschleunigung des Neubaus. \autocite[Vgl.][ S. 8]{walberg_wohnungsbau_2025} Gleichzeitig stellt die Bundesregierung ein Sondervermögen für Infrastruktur und Klimaschutz bis 2029 in Milliardenhöhe bereit, um die bauliche Transformation voranzutreiben. \autocite[Vgl.][online]{brinkmeier_bundeshaushalt_2025} Die Umsetzung dieser Mittel in konkrete Projekte droht jedoch an strukturellen Problemen zu scheitern: Eklatanter Fachkräftemangel, anhaltende Kapazitätsengpässe in der Bauwirtschaft und langwierige Genehmigungsverfahren bremsen die Realisierung.
 
-Verschärft wird diese Situation durch eine traditionell fragmentierte und sequenziell organisierte Projektabwicklung. Die etablierte Projektkultur in Deutschland, die stärker auf vertragliche Abgrenzung als auf kooperative Zusammenarbeit ausgerichtet ist, begünstigt strukturelle Ineffizienzen. Dies manifestiert sich in Kosten- und Terminüberschreitungen, die bei öffentlichen Großprojekten im Durchschnitt bei über 40\,\% liegen.\autocite[vgl. S. 1]{kostka_grosprojekte_2025}
+Verschärft wird diese Situation durch eine traditionell fragmentierte und sequenziell organisierte Projektabwicklung. Die etablierte Projektkultur in Deutschland, die stärker auf vertragliche Abgrenzung als auf kooperative Zusammenarbeit ausgerichtet ist, begünstigt strukturelle Ineffizienzen. Dies manifestiert sich in Kosten- und Terminüberschreitungen, die bei öffentlichen Großprojekten im Durchschnitt bei über 40\,\% liegen.\autocite[Vgl.][ S. 1]{kostka_grosprojekte_2025}
 Als vielversprechender Lösungsansatz haben sich international integrierte Projektabwicklungsmodelle wie die \ac{IPA} etabliert. Bei diesen Modellen liegt der Fokus auf einem kollaborativen Ansatz, bei dem wesentliche Akteure frühzeitig in einem Mehrparteienvertrag gebunden werden, um das Projekt gemeinsam auf den Gesamterfolg auszurichten.
-Auch in Deutschland hat das Thema in den letzten Jahren stark an Fahrt aufgenommen. Das IPA-Zentrum identifizierte in seinem Jahresbericht 2025 bereits über 43 Pilotprojekte\autocite[vgl. S. 11 ]{haghsheno_ipa-report_2025}.
+Auch in Deutschland hat das Thema in den letzten Jahren stark an Fahrt aufgenommen. Das IPA-Zentrum identifizierte in seinem Jahresbericht 2025 bereits über 43 Pilotprojekte\autocite[Vgl.][ S. 11]{haghsheno_ipa-report_2025}.
 Ein zentraler Prozessbaustein zur Kosten- und Wertsteuerung innerhalb dieser Modelle ist das \enquote{\ac{TVD}}. Während zu den übergeordneten vertraglichen Rahmenbedingungen (\ac{IPA}) bereits Forschung im deutschen Kontext existiert, fehlt bislang eine systematische, prozessorientierte Aufbereitung für die Anwendung von \ac{TVD}. Es mangelt an einer Übersetzung der Methodik, die den spezifischen Restriktionen der deutschen Baupraxis (\acs{VOB}, \acs{HOAI}) Rechnung trägt. Hier setzt die vorliegende Arbeit an.
 
 \section{Zielsetzung und Forschungsfrage}
