--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -21,15 +21,6 @@ Insbesondere im öffentlichen Vergaberecht wird diese Trennung durch das Verbot 
 \minisec{Sequenzialität und die \enquote{V-Struktur} der Kommunikation}
 Die organisatorische Struktur konventioneller Projekte folgt einer bilateralen Logik, die in der Literatur oft als \enquote{V-Struktur} bezeichnet wird. Der Bauherr schließt isolierte Einzelverträge mit den Planungsbeteiligten (LPH 1–4/5) und erst zu einem deutlich späteren Zeitpunkt mit den bauausführenden Unternehmen (LPH 6–9). Zwischen den beiden Gruppen, den Trägern des \enquote{Entwurfswissens} und den Trägern des \enquote{Fertigungswissens}, existiert keine vertragliche oder prozessuale Verbindung \autocite[Vgl.][ S. 12]{sommer_projektmanagement_2016}. 
 
-\begin{figure}[htbp]
-    \centering
-    \fcolorbox{gray!50}{white}{%
-        \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax, height=0.5\textwidth]{05_figures/V_Struktur_Silos.jpg}
-    }
-    \caption[V-Struktur der Kommunikation]{Bilaterale Vertrags- und Kommunikationsstrukturen (V-Struktur) in der konventionellen Projektabwicklung (Quelle: Eigene Darstellung in Anlehnung an Habib 2020).}
-    \label{fig:v_struktur}
-\end{figure}
-
 Diese Fragmentierung der Projektorganisation führt zu einer sequenziellen Informationsweitergabe, bei der Planungsentscheidungen isoliert durch einzelne Fachdisziplinen getroffen und erst zeitverzögert an nachgelagerte Akteure weitergegeben werden. In der traditionellen Projektabwicklung erfolgt die Entscheidungsfindung dabei schrittweise und spezialisiert, wodurch das Wissen der ausführenden Unternehmen systematisch erst nach Abschluss zentraler Entwurfsentscheidungen wirksam wird. Ballard und Howell beschreiben dieses Vorgehen als ein Paradigma, in dem Entscheidungen sequentiell von Spezialisten getroffen und anschließend „über die Wand geworfen“ werden, anstatt nachgelagerte Akteure frühzeitig in upstream-Entscheidungen einzubinden \autocite[Vgl.][S.1 ff]{ballard_lean_2003}.
 
 Die Folge ist ein struktureller Ausschluss ausführungsspezifischen Wissens in jener Projektphase, in der die Möglichkeit zur Kostenbeeinflussung am größten ist. Habib fasst dieses Defizit im Kontext der konventionellen Projektabwicklung als einen Verlust entscheidungsrelevanten Produktionswissens zusammen, da das Know-how der späteren Realisierungsakteure in der Entwurfsphase faktisch nicht berücksichtigt wird \autocite[Vgl.][S. 46 f.]{habib_alternative_2020}.
@@ -42,15 +33,6 @@ Die zeitliche Entkopplung von Entscheidungs- und Ausführungswissen wird durch d
 
 \minisec{Informationsasymmetrie und die \enquote{Knowledge Gap}}
 Ein wesentliches Defizit dieser Rollentrennung ist die entstehende Informationsasymmetrie. Während der Planer die funktionale und gestalterische Qualität definiert, verfügt erst der Bauunternehmer über die detaillierte Kenntnis der realen Kostenstrukturen und Bauprozesse. In der konventionellen Abwicklung kollidieren diese Welten erst nach der Vergabe. Erweist sich die Planung als nicht baubar oder ökonomisch ineffizient, sind aufwendige Umplanungen (\textit{Rework}) die Folge, welche wiederum die Zeitpläne und Budgets belasten \autocite[Vgl.][S.]{ballard_lean_2003}. Die MacLeamy-Kurve illustriert hierbei eindrücklich, dass die Fähigkeit zur Kostenbeeinflussung mit fortschreitender Projektdauer rapide sinkt, während die Kosten für Änderungen exponentiell ansteigen. \autocite[Vgl.][S. 5]{curt_collaboration_2004}
-
-\begin{figure}[htbp]
-    \centering
-    \fcolorbox{gray!50}{white}{%
-        \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax, height=0.5\textwidth]{05_figures/Knowledge_Gap.jpg}
-    }
-    \caption[Knowledge Gap]{Die Wissenslücke (\textit{Knowledge Gap}) zwischen Planungs- und Ausführungsexpertise im konventionellen Prozess (Quelle: Eigene Darstellung).}
-    \label{fig:knowledge_gap}
-\end{figure}
 
 \minisec{Haftungssilos und Misstrauenskultur}
 Die Fragmentierung wird durch das deutsche Haftungsrecht verstärkt. Da jeder Akteur primär für seinen abgegrenzten Leistungsbereich haftet, entsteht ein System von \enquote{Haftungssilos}. Anstatt Probleme interdisziplinär an den Schnittstellen zu lösen, konzentrieren sich die Akteure auf die eigene Risikoabsicherung und Exkulpanz \autocite[Vgl.][S. 263]{schwab_konfliktkompetenz_2019}. In der Praxis manifestiert sich dies in einer Flut von Behinderungsanzeigen und Bedenkenanmeldungen nach VOB/B, die eher der Dokumentation des gegenseitigen Versagens als dem Projekterfolg dienen. Dieses feindselige Klima (\textit{adversarial relationship}) verhindert die für moderne Steuerungskonzepte wie das Target Value Design notwendige radikale Transparenz und das gegenseitige Vertrauen \autocite[Vgl.][S. 7 f]{latham_constructing_1994}.
@@ -81,16 +63,6 @@ Die Phasen lassen sich grob in drei Blöcke unterteilen:
 
 Diese Phasentrennung führt dazu, dass Planungsergebnisse zu starren Meilensteinen \enquote{eingefroren} werden müssen, um die darauf basierenden Honoraransprüche und Genehmigungsschritte zu sichern. Nachträgliche Anpassungen oder die Rückkehr zu bereits abgeschlossenen Phasen für Optimierungszwecke werden systemisch als \enquote{Störung} oder kostenpflichtige \enquote{Umplanung} gewertet, anstatt als integraler Teil der Wertschöpfung begriffen zu werden \autocite[Vgl.][§~34 i.\,V.\,m.~Anl.~10]{hoai_honorarordnung_2021}.
 
-\begin{figure}[htbp]
-    \centering
-     \fcolorbox{gray!50}{white}{%
-    \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax, height=0.5\textwidth]{05_figures/HOAI vs. TVD Phasen Vergleich .jpg}%
-    }
-    
-    \caption[Vergleich HOAI und TVD]{Vergleich der HOAI-Leistungsphasen mit dem idealtypischen TVD-Phasenmodell (Quelle: Eigene Darstellung).}
-    \label{fig:phasenvergleich}
-\end{figure}
-
 \minisec{Starrheit der Kostensteuerung nach DIN 276}
 Die konventionelle Kostenermittlung orientiert sich an der DIN 276, welche Kosten nach Kostengruppen (Bauteilen) strukturiert (z.B. KG 300 Bauwerk - Baukonstruktion).\autocite[Vgl.][S. 13 ]{din_276_din_2018} Diese bauteilorientierte Sichtweise erschwert eine interdisziplinäre Funktionsoptimierung. In der konventionellen Praxis dient die DIN 276 primär als Instrument zur ex-post-Dokumentation. Da die Kostenverantwortung innerhalb der gewerkspezifischen Planungs-Silos verbleibt, können Budgetüberschreitungen oft erst dann festgestellt werden, wenn der Planungsgrad bereits so weit fortgeschritten ist, dass korrigierende Eingriffe hohe Änderungskosten verursachen. \autocite[Vgl.][S. 3 f]{becker_integrierte_2022}
 
@@ -106,15 +78,6 @@ Beide Vertragsformen basieren auf der Fiktion eines zum Zeitpunkt der Vergabe ab
 
 \minisec{Vergaberechtliche Restriktionen}
 Ergänzt wird dieses Korsett durch das Vergaberecht (insb. GWB und VgV), welches insbesondere öffentliche Auftraggeber zur Losvergabe und zum Preiswettbewerb zwingt. Diese regulatorischen Vorgaben erschweren die frühzeitige Einbindung von Ausführungswissen (\textit{Early Contractor Involvement}), da eine Zusammenarbeit vor der formalen Vergabe oft als wettbewerbsverzerrende \enquote{Vorbefasstheit} gewertet wird. \autocite[Vgl.][§~97~Abs.~1~u.~2]{noauthor_gesetz_2013}\,\autocite[Vgl.][§~7~Abs.~1~u.~2]{vgv_verordnung_2016}Damit wird das in 2.1.1 beschriebene Wissens-Vakuum in der Entwurfsphase rechtlich institutionalisiert.
-
-\begin{figure}[htbp]
-    \centering
-    \fcolorbox{gray!50}{white}{%
-        \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax, height=0.5\textwidth]{05_figures/Claim_Circle_Teufelskreis.jpg}
-    }
-    \caption[Teufelskreis des Nachtragsmanagements]{Ökonomische Fehlanreize und der Teufelskreis des konventionellen Claim-Managements (Quelle: Eigene Darstellung in Anlehnung an Girmscheid 2016).}
-    \label{fig:claim_circle}
-\end{figure}
 
 Zusammenfassend lässt sich festhalten, dass HOAI und VOB ein starres System schaffen, das auf Misstrauen und exakter Abgrenzung von Leistungen basiert. Eine proaktive, wertorientierte Steuerung, die Flexibilität und Kooperation voraussetzt, ist innerhalb dieser regulatorischen Leitplanken kaum realisierbar.
 
@@ -230,7 +193,7 @@ IPA adressiert dieses strukturelle Defizit durch ein gezieltes \enquote{Frontloa
 Rechtlich wird die Allianz durch einen Mehrparteienvertrag besiegelt. Im Gegensatz zur bilateralen V-Struktur unterzeichnen alle Schlüsselpartner (Bauherr, Planer, Hauptgewerke) denselben Vertrag. Dies schafft eine rechtliche \enquote{Klammer}, die opportunistisches Verhalten unterbindet, da Vertragsbrüche oder Klagen nicht gegen einen \enquote{Gegner}, sondern gegen das eigene Team gerichtet wären \autocite[vgl. S. 5]{bold_integrierte_2022}.
 
 \minisec{Das kommerzielle Modell: Pain/Gain-Share Mechanismus}
-Das Herzstück der \ac{IPA} ist das Inzentivierungsmodell, das die ökonomischen Interessen aller Beteiligten synchronisiert (\textit{Alignment of Interests}). Anstatt Gewinne durch Nachträge oder Mengensteigerungen zu maximieren, partizipieren alle Partner am Gesamterfolg des Projekts. Dieses Modell basiert typischerweise auf einer Drei-Säulen-Struktur (3-Limb-Model), wie in \cref{fig:ipa_verguetung} dargestellt \autocite[Vgl.][S. 33 ff.]{becker_integrierte_2022}:
+Das Herzstück der \ac{IPA} ist das Inzentivierungsmodell, das die ökonomischen Interessen aller Beteiligten synchronisiert (\textit{Alignment of Interests}). Anstatt Gewinne durch Nachträge oder Mengensteigerungen zu maximieren, partizipieren alle Partner am Gesamterfolg des Projekts. Dieses Modell basiert typischerweise auf einer Drei-Säulen-Struktur (3-Limb-Model): \autocite[Vgl.][S. 33 ff.]{becker_integrierte_2022}
 
 \begin{enumerate}
     \item \textbf{Limb 1 -- Erstattung der Selbstkosten:} Das Fundament der Vergütung bilden die direkten projektbezogenen Kosten (Personal, Material, Nachunternehmer, Geräte). Diese werden den Partnern zu 100\,\% transparent erstattet. Dies sichert die Liquidität der Unternehmen, bietet jedoch keinerlei Gewinnmarge.
