--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -11,7 +11,7 @@ Um im Rahmen dieser Arbeit dennoch untersuchen zu können, wie kompatibel \ac{TV
 
 Für die weitere Untersuchung wird ein Modell mit vier Phasen zugrunde gelegt. Es verbindet das Prozess-Schema nach Ballard\,\autocite[Vgl.][S. 2 ff]{ballard_target_2012} mit dem Phasenmodell des \acl{LCI}.\autocite[Vgl.][S. 8]{hill_target_2017} Diese Gliederung weist zudem deutliche Parallelen zum deutschen Modell der Integrierten Projektabwicklung (IPA) auf. Ein wesentlicher Unterschied liegt jedoch in der Gewichtung der Validierung: Während das hier genutzte TVD-Modell der Validierung aufgrund ihrer zentralen Steuerungsfunktion eine eigenständige Phase widmet (Phase 1), verortet das IPA-Modell diesen Prozessschritt integrativ zu Beginn der Planungsphase. Die zugrundeliegende Logik, dass keine Realisierung ohne gesicherte Zielkosten erfolgt, ist beiden Ansätzen jedoch gemein.\autocite[Vgl.][S.8]{haghsheno_ipa-report_2025}
 
-Während das Modell des Lean Construction Institute die Phasen Design (Planung) und Construction (Ausführung) häufig unter dem Begriff \enquote{Value Delivery} zusammenfasst\autocite[Vgl.][S. 35]{hill_target_2017}, nimmt das vorgeschlagene Modell eine bewusste Trennung zwischen Phase 2 (Design) und Phase 3 (Realisierung) vor. Diese Unterscheidung erfolgt aus methodischen Gründen. Sie ermöglicht im späteren Transferkapitel einen präzisen Vergleich mit der in Deutschland durch \acs{VOB} und \ac{HOAI} verankerten Trennung von Planung und Ausführung (vgl. Abbildung \ref{fig:phasenvergleich}). Gleichzeitig bleibt die für \ac{TVD} essenzielle Phase der Validierung als eigenständiger Abschnitt erhalten.
+Während das Modell des Lean Construction Institute die Phasen Design (Planung) und Construction (Ausführung) häufig unter dem Begriff \enquote{Value Delivery} zusammenfasst\autocite[Vgl.][S. 35]{hill_target_2017}, nimmt das vorgeschlagene Modell eine bewusste Trennung zwischen Phase 2 (Design) und Phase 3 (Realisierung) vor. Diese Unterscheidung erfolgt aus methodischen Gründen. Sie ermöglicht im späteren Transferkapitel einen präzisen Vergleich mit der in Deutschland durch \acs{VOB} und \ac{HOAI} verankerten Trennung von Planung und Ausführung. Gleichzeitig bleibt die für \ac{TVD} essenzielle Phase der Validierung als eigenständiger Abschnitt erhalten.
 
 Das zugrunde gelegte Modell gliedert sich demnach wie folgt:
 \begin{itemize}[leftmargin=2em]
@@ -87,13 +87,12 @@ Zudem bildet dieses \enquote{Gap} die ökonomische Basis für das in Phase 1 und
 Erst wenn diese prinzipielle Machbarkeit bestätigt ist, wird das Projekt freigegeben und die Rekrutierung des integrierten Teams eingeleitet.
 
 \begin{figure}[htbp]
-    \centering
-     \fcolorbox{gray!50}{white}{%
-    \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{}%
-    }
-    
-    \caption[Phase 0: Projektdefinition]{Phase 0: Projektdefinition (Quelle: Eigene Darstellung).}
-    \label{fig:Phase o}
+    \centering 
+    \fcolorbox{gray!50}{white}{%
+    \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/Phase 0.png}%
+    }     
+    \caption[Phase 0 - Projektinitiierung]{Phase 0: Projektdefinition (Quelle: Eigene Darstellung)}
+    \label{fig:phase0}
 \end{figure}
 
 \clearpage
@@ -170,6 +169,17 @@ Die Ergebnisse der Validierungsphase werden abschließend im \textbf{Validierung
 Mit der Projektfreigabe erfolgt die formale Fixierung der Ziele im \textbf{Target Value Statement}. Ein zentraler Aspekt ist dabei die Festlegung der \textbf{Basiszielkosten} (\textit{Target Cost}). Diese leiten sich aus den validierten Marktkosten (\textit{Estimated Cost}) ab, werden jedoch im TVD-Verfahren typischerweise unterhalb dieser Prognose angesetzt. Diese Differenz dient als bewusster Puffer gegen Unvorhergesehenes und schafft einen Innovationsdruck für das Team, die Kosten durch intelligentes Design weiter zu senken \autocite[Vgl.][ S.10]{ballard_target_2025}
 
 Zur Absicherung dieser Verpflichtung wird mit der Festlegung der Zielkosten auch der kommerzielle \textbf{Pain/Gain-Share-Mechanismus} aktiviert. Unterschreitet das Team durch Optimierungen in der Folgephase die Basiszielkosten, wird die Einsparung zwischen Bauherr und Planungsteam geteilt (\textit{Gain}). Überschreiten die Kosten hingegen den Zielwert, haftet das Team bis zu einer definierten Grenze mit seinem Risikopool (\textit{Pain}). Diese vertragliche Kopplung von Projekterfolg und Unternehmensgewinn stellt sicher, dass die Einhaltung der Zielkosten für alle Beteiligten nicht nur eine vertragliche Pflicht, sondern ein ökonomisches Eigeninteresse darstellt. \autocite[Vgl.][S.14]{ballard_target_2012}\,\autocite[Vgl.][S.30]{ballard_target_2025}
+
+\begin{figure}[htbp]
+    \centering 
+    \fcolorbox{gray!50}{white}{%
+    \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/Phase 1.png}%
+    }     
+    \caption[Phase 1 - Validierung]{Phase 1: Validierung der Zielkosten (Quelle: Eigene Darstellung)}
+    \label{fig:phase1}
+\end{figure}
+
+\FloatBarrier
 
 \subsection{Vergabe- und vertragsrechtliche Implementierungshürden}
 \label{sec:4.3.4}
@@ -282,6 +292,15 @@ Das entscheidende Kriterium für den Übergang in Phase 3 ist jedoch die Preissi
 
 \textbf{Das finale Gate (Release for Construction):}
 Erst wenn die Prognosekosten (Expected Cost) sicher unterhalb der Allowable Cost liegen, wird das Projekt zur physischen Realisierung freigegeben.\autocite[Vgl.][S.129]{hill_target_2017}
+
+\begin{figure}[H]
+    \centering 
+    \fcolorbox{gray!50}{white}{%
+    \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/Phase 2.png}%
+    }     
+    \caption[Phase 2 - Design to Target]{Phase 2: Design to Target (Quelle: Eigene Darstellung)}
+    \label{fig:phase2}
+\end{figure}
 
 \subsection{Prozessuale und regulatorische Implementierungshürden der Planungsphase}
 \label{sec:4.4.6}
